# coap2http-proxy

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  install_libcoap.sh  install_liboqs_for_wolfssl.sh  install_proxy.sh  install_wolfssl.sh
examples/: coap-client.c  coap-server.c
include/coap3/: coap2HttpServer.h  coap_net_internal.h  net.h  pdu.h  proxyServer.h
src/: block.c  coap2HttpServer.c  http2CoapServer  http2CoapServer.c  httpClient  httpClient.c  httpServer.c  mongoose.c  mongoose.h  net.c  proxyServer  proxyServer.c
